# mvk

./: .clang-format  .gitignore  CMakeLists.txt
mvk/: CMakeLists.txt  ShaderTypes.hpp  basic_types.hpp  buffer_manager.cpp  buffer_manager.hpp  context.cpp  context.hpp  factories.cpp  factories.hpp  fwd.hpp  main.cpp  renderer.cpp  renderer.hpp  shader_types.hpp
mvk/Detail/: Helpers.cpp  Helpers.hpp  Misc.cpp  Misc.hpp  Readers.cpp  Readers.hpp
mvk/Engine/: Allocator.hpp  AllocatorBlock.cpp  AllocatorBlock.hpp  AllocatorContext.cpp  AllocatorContext.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Debug.hpp  DrawCallGenerator.cpp  DrawCallGenerator.hpp  IboMgr.cpp  IboMgr.hpp  IdxBuff.cpp  IdxBuff.hpp  IdxBuffObj.cpp  IdxBuffObj.hpp  ImgObj.cpp  ImgObj.hpp  Misc.cpp  Misc.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  StagingBuff.cpp  StagingBuff.hpp  StagingBuffObj.cpp  StagingBuffObj.hpp  StagingMgr.cpp  StagingMgr.hpp  Tex.cpp  Tex.hpp  UboBuff.cpp  UboBuff.hpp  UboMgr.cpp  UboMgr.hpp  UniformBuffObj.cpp  UniformBuffObj.hpp  VboMgr.cpp  (+9 more)
mvk/Utility/: Badge.hpp  CMakeLists.txt  Concepts.hpp  Macros.hpp  Pointers.hpp  Singleton.hpp  Slice.hpp  Verify.hpp
mvk/detail/: CMakelists.txt  checkers.cpp  checkers.hpp  creators.cpp  creators.hpp  helpers.cpp  helpers.hpp  misc.cpp  misc.hpp  query.hpp  readers.cpp  readers.hpp
mvk/engine/: CMakeLists.txt  DrawCallGenerator.cpp  DrawCallGenerator.hpp  Renderer.hpp  StagingBuff.cpp  StagingBuff.hpp  Tex.cpp  VtxBuff.hpp  allocate.cpp  allocate.hpp  context.cpp  context.hpp  debug.hpp  draw.cpp  draw.hpp  image.cpp  image.hpp  init.cpp  init.hpp  misc.cpp  misc.hpp  types.hpp
mvk/types/: CMakeLists.txt  buffer.cpp  buffer.hpp  command_buffers.cpp  command_buffers.hpp  command_pool.cpp  command_pool.hpp  common.hpp  debug_messenger.cpp  debug_messenger.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_sets.cpp  descriptor_sets.hpp  device.cpp  device.hpp  device_memory.cpp  device_memory.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  queue.cpp  queue.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  (+14 more)
mvk/types/detail/: CMakeLists.txt  checkers.cpp  checkers.hpp  create_handler.hpp  creator_handler.hpp  creator_traits.hpp  deleter.hpp  deleter_traits.hpp  misc.cpp  misc.hpp  staging.cpp  staging.hpp  wrapper.hpp  wrapper_ctor.hpp  wrapper_dtor.hpp
mvk/types/validation/: validation.hpp
mvk/utility/: CMakeLists.txt  basic_buffer.hpp  common.hpp  compressed_pair.hpp  concepts.hpp  condition.hpp  exists.hpp  find_if.hpp  misc.hpp  pack.hpp  pointers.hpp  slice.hpp  trace.cpp  trace.hpp  types.hpp  unique_wrapper.hpp  verify.cpp  verify.hpp
mvk/utility/detail/: common.hpp  condition.hpp  exists.hpp  find_if.hpp  pack.hpp
mvk/utility/meta/: CMakeLists.txt  common.hpp  condition.hpp  exists.hpp  find_if.hpp  pack.hpp
mvk/validation/: CMakeLists.txt  validation.hpp
mvk/vk_types/: CMakeLists.txt  buffer.cpp  buffer.hpp  command_buffers.cpp  command_buffers.hpp  command_pool.cpp  command_pool.hpp  common.hpp  debug_messenger.cpp  debug_messenger.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_sets.cpp  descriptor_sets.hpp  device.cpp  device.hpp  device_memory.cpp  device_memory.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  queue.cpp  queue.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  (+13 more)
mvk/vk_types/detail/: CMakeLists.txt  checkers.cpp  checkers.hpp  deleter.hpp  deleter_base.hpp  get_container.hpp  misc.cpp  misc.hpp  staging.cpp  staging.hpp  wrapper.hpp  wrappers.hpp
mvk/vk_types/validation/: validation.hpp
mvk/wrapper/: CMakeLists.txt  allocated.hpp  any_wrapper.hpp  created.hpp  fwd.hpp  handle_get.hpp  handle_only.hpp  object_allocate.hpp  object_create.hpp  object_destroy.hpp  object_free.hpp  owner_create.hpp  owner_destroy.hpp  unique.hpp  wrapper.hpp
shaders/: shader.frag  shader.vert  vert.spv
